Optimised scripts added optional animation

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,3 +1,4 @@
 source = ~/.config/hypr/sys.conf
 source = ~/.config/hypr/ux.conf
 source = ~/.config/hypr/bindings.conf
+#source = ~/.config/hypr/animation.conf
