--- a/hypr/ux.conf
+++ b/hypr/ux.conf
@@ -2,7 +2,7 @@ general {
     gaps_in = 10 
     gaps_out = 0 
     border_size = 2 
-    col.active_border = rgba(B0A4FFFF) rgba(b4befeFF) 45deg
+    col.active_border = rgba(B0A4FFFF) rgba(B0A4FF00) 45deg
     #col.active_border = rgba(B0A4FFFF)
     #col.active_border = rgba(8AADF4FF)
     #col.active_border = rgba(b4befeFF)
@@ -48,7 +48,7 @@ animations {
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
     animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
+    #animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
     animation = workspaces, 1, 6, default#, slidevert
 }
