Updated to newest nixOS version with some quality of life changes

--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -15,10 +15,15 @@ bind = $mainMod, P, exec, $menu
 bind = $mainMod ALT, L, exec, swaylock --screenshots --clock --effect-blur 100x1 --indicator --ring-color cba6f7 --inside-color 1e1e2e --key-hl-color fab387 --text-ver-color cba6f7 --layout-text-color cba6f7
 
 # Fan Control.
-bind = $mainMod, 1, exec, $terminal -e sudo ectool --interface=lpc autofanctrl
-bind = $mainMod, 2, exec, $terminal -e sudo ectool --interface=lpc fanduty 40
-bind = $mainMod, 3, exec, $terminal -e sudo ectool --interface=lpc fanduty 100
+#bind = $mainMod, 1, exec, $terminal -e sudo ectool --interface=lpc autofanctrl
+#bind = $mainMod, 2, exec, $terminal -e sudo ectool --interface=lpc fanduty 40 # Removed due to changes in sudoers file
+#bind = $mainMod, 3, exec, $terminal -e sudo ectool --interface=lpc fanduty 100
 bind = $mainMod, 4, exec, $terminal -e sudo bash /home/$(whoami)/.config/hypr/scripts/fan.sh
+
+bind = $mainMod, 1, exec, sudo ectool --interface=lpc autofanctrl
+bind = $mainMod, 2, exec, sudo ectool --interface=lpc fanduty 40
+bind = $mainMod, 3, exec, sudo ectool --interface=lpc fanduty 100
+
 
 # Audio
 bind = , XF86AudioRaiseVolume, exec, pamixer -i 5
