--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,11 +1,3 @@
-import = [
-  # uncomment the flavour you want below:
-  # "~/.config/alacritty/catppuccin-latte.toml"
-  # "~/.config/alacritty/catppuccin-frappe.toml"
-  # "~/.config/alacritty/catppuccin-macchiato.toml"
-  "~/.config/alacritty/catppuccin-mocha.toml"
-]
-
 [font]
 normal = { family = "FiraCode Nerd Font" }
 size = 12
@@ -17,3 +9,12 @@ hide_when_typing = true
 
 [env]
 TERM = "xterm-256color"
+
+[general]
+import = [
+  # uncomment the flavour you want below:
+  # "~/.config/alacritty/catppuccin-latte.toml"
+  # "~/.config/alacritty/catppuccin-frappe.toml"
+  # "~/.config/alacritty/catppuccin-macchiato.toml"
+  "~/.config/alacritty/catppuccin-mocha.toml"
+]
