--- a/hypr/ux.conf
+++ b/hypr/ux.conf
@@ -22,10 +22,10 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 1.0 
 
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    #drop_shadow = true
+    #shadow_range = 4
+    #shadow_render_power = 3
+    #col.shadow = rgba(1a1a1aee) # Why were these removed and what did they even do?
     blur {
         enabled = true
         size = 7
