moving back to arch

--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -20,9 +20,9 @@ bind = $mainMod ALT, L, exec, swaylock --screenshots --clock --effect-blur 100x1
 #bind = $mainMod, 3, exec, $terminal -e sudo ectool --interface=lpc fanduty 100
 bind = $mainMod, 4, exec, $terminal -e sudo bash /home/$(whoami)/.config/hypr/scripts/fan.sh
 
-bind = $mainMod, 1, exec, sudo ectool --interface=lpc autofanctrl
-bind = $mainMod, 2, exec, sudo ectool --interface=lpc fanduty 40
-bind = $mainMod, 3, exec, sudo ectool --interface=lpc fanduty 100
+bind = $mainMod, 1, exec, sudo /usr/bin/ectool --interface=lpc autofanctrl
+bind = $mainMod, 2, exec, sudo /usr/bin/ectool --interface=lpc fanduty 40
+bind = $mainMod, 3, exec, sudo /usr/bin/ectool --interface=lpc fanduty 100
 
 
 # Audio
