--- a/hypr/sys.conf
+++ b/hypr/sys.conf
@@ -1,4 +1,4 @@
-monitor = eDP-1,preferred,auto,1#1.3333
+monitor = eDP-1,preferred,auto,1
 
 $terminal = alacritty
 $browser = floorp
@@ -6,6 +6,7 @@ $fileManager = dolphin
 $menu = wofi --show drun
 
 exec-once = eww open-many countdown clock date bar
+#exec-once = ironbar
 exec-once = swaybg -i /home/$(whoami)/Pictures/Backgrounds/Error.jpg
 #exec-once = swayidle timeout 120 'swaylock --screenshots --clock --grace 20 --effect-blur 10x5 --fade-in 5 --indicator --ring-color cba6f7 --inside-color 1e1e2e --key-hl-color fab387 --text-ver-color cba6f7 --layout-text-color cba6f7'
 exec-once = wl-paste -t text --watch clipman store
