--- a/hypr/ux.conf
+++ b/hypr/ux.conf
@@ -10,7 +10,7 @@ general {
 
     layout = dwindle
 
-    allow_tearing = false
+    allow_tearing = true#false
 
     resize_on_border = true
     extend_border_grab_area = 15
@@ -98,6 +98,4 @@ windowrulev2 = opacity 0.8 0.8,class:^(obsidian)$
 windowrulev2 = opacity 0.8 0.8,class:^(Alacritty)$
 windowrulev2 = opacity 0.8 0.8,class:^(KeePassXC)$
 windowrulev2 = opacity 0.8 0.8,class:^(Element)$
-
-# windowrulev2 = float,class:(Alacritty),title:(Alacritty)
 
